syntax = "proto3";

package auth;

option go_package = "github.com/nik19ta/gostat/proto/auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Registration (RegistrationRequest) returns (RegistrationResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc ConfirmAccount (ConfirmAccountRequest) returns (ConfirmAccountResponse) {}
  rpc PasswordRequest (PasswordRequestRequest) returns (PasswordRequestResponse) {}
  rpc PasswordReset (PasswordResetRequest) returns (PasswordResetResponse) {}
}

message PasswordRequestRequest {
  string mail = 1;
}

message PasswordResetRequest {
  string mail = 1;
  string secret = 2;
  string password = 3;
}

message PasswordRequestResponse {
  bool status = 1;
  string secret = 2;
  string first_name = 3;
  string socend_name = 4;
}

message PasswordResetResponse {
  string token = 1;
  string refresh_token = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message ConfirmAccountRequest {
  string secret = 1;
}

message ConfirmAccountResponse  {
  bool status = 1;
}

message RegistrationRequest {
  string login = 1;
  string mail = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string middle_name = 6;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}


message LoginResponse {
  string token = 1;
  string refresh_token = 2;
}

message RegistrationResponse {
  string token = 1;
  string refresh_token = 2;
  string code = 3;
  bool status = 4;
  string text = 5;
}

message RefreshTokenResponse {
  string new_token = 1;
}